--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
 body {
   overflow: hidden;
 }
+
+.remove,
+.add {
+  position: absolute;
+  z-index: 1;
+  bottom: 70px;
+  left: 85%;
+  transform: translate(-50%);
+  width: 100px;
+  height: 25px;
+}
+
+.remove {
+  bottom: 40px;
+}
